# aba-761-python

./: .gitignore  5_armed_bandit_task.ipynb  Chapter1_Exercises_Instructor.ipynb  Chapter1_Exercises_Student (1).ipynb  Module2_Exercises_Student (jott).ipynb  bandit_data_P01.csv  exploration and exploitation.md  revenue.py (NOT for Class)
fba_tracker📱/: app.py  (+1 more)
smm2_behavioral_research_platform/: Makefile  README.md  generate_project_overview.py  pyproject.toml
smm2_behavioral_research_platform/notebooks/: 00_data_pipeline.ipynb  01_rate_analysis.ipynb  02_discrimination_generalization.ipynb  03_matching_law.ipynb  04_explore_exploit.ipynb  05_sequential_behavior.ipynb  06_ioa.ipynb  07_behavioral_momentum_amelioration.ipynb  08_compound_schedules.ipynb  09_delay_discounting.ipynb
smm2_behavioral_research_platform/references/builder_guides/: 00_builder_guide_overview.md  01_demo_positive_reinforcement.md  01_research_positive_reinforcement.md  02_demo_reinforcement_schedules.md  03_demo_extinction.md  04_demo_negative_reinforcement.md  05_demo_punishment.md  06_demo_shaping.md  07_demo_stimulus_control.md  08_demo_generalization.md  09_demo_behavioral_chaining.md  10_demo_matching_law.md  11_demo_explore_exploit.md  12_demo_behavioral_momentum.md  13_demo_amelioration.md  14_demo_concurrent_schedules.md  15_demo_alternative_schedules.md  16_demo_conjunctive_schedules.md  17_demo_multiple_schedules.md  18_demo_mixed_schedules.md  19_demo_chained_schedules.md  (+2 more)
smm2_behavioral_research_platform/smm2_behavioral_research_platform/: __main__.py  app.py  phenomena.json
(+57 files in other folders)
